Correct " testimonial dark mode color

--- a/components/components/testimonial-card/testimonial-card.scss
+++ b/components/components/testimonial-card/testimonial-card.scss
@@ -86,7 +86,7 @@
 
 	&-client-text {
 		&::after {
-			color: $dark;
+			color: $white;
 		}
 	}
 }
